🧪 Add comprehensive unit tests for EmailQueueService
🎯 What: Added missing unit tests for EmailQueueService to ensure reliability of the transactional email outbox mechanism.
📊 Coverage: Tested empty recipients drop behavior, successful enqueuing with property assignments, and attachment mapping.
✨ Result: Reliable and fast unit testing coverage for EmailQueueService that runs offline.