@@ -38,6 +38,8 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -66,6 +68,7 @@ import de.felixhertweck.seatreservation.reservation.exception.EventBookingClosed
 import de.felixhertweck.seatreservation.reservation.exception.NoSeatsAvailableException;
 import de.felixhertweck.seatreservation.reservation.exception.SeatAlreadyReservedException;
 import de.felixhertweck.seatreservation.reservation.exception.SeatBlockedException;
+import de.felixhertweck.seatreservation.reservation.exception.SeatPendingException;
 import de.felixhertweck.seatreservation.utils.CodeGenerator;
 import io.quarkus.hibernate.orm.panache.PanacheQuery;
 import io.quarkus.test.InjectMock;
@@ -90,6 +93,8 @@ class ReservationServiceTest {
     @InjectMock EmailSeatMapTokenRepository emailSeatMapTokenRepository;
 
     @InjectMock EmailService emailService;
+
+    @InjectMock SeatCartService seatCartService;
 
     private User currentUser;
     private User otherUser;
@@ -215,8 +220,10 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
-        when(reservationRepository.findByEventId(event.id)).thenReturn(Collections.emptyList());
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
+        when(reservationRepository.findByEventIdAndSeatIds(eq(event.id), anyList()))
+                .thenReturn(Collections.emptyList());
         doNothing().when(eventUserAllowanceRepository).persist(any(EventUserAllowance.class));
 
         List<UserReservationResponseDTO> result =
@@ -224,6 +231,28 @@ class ReservationServiceTest {
 
         assertFalse(result.isEmpty());
         assertEquals(1, result.size());
+        verify(seatCartService, times(1)).releaseSeats(event.id, dto.getSeatIds());
+    }
+
+    @Test
+    void createReservationForUser_SeatPendingException_HeldByAnotherUsersCart() {
+        UserReservationsRequestDTO dto = new UserReservationsRequestDTO();
+        dto.setEventId(event.id);
+        dto.setSeatIds(Set.of(seat1.id));
+
+        when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
+        mockSeatFind(dto.getSeatIds(), List.of(seat1));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
+        when(reservationRepository.findByEventIdAndSeatIds(eq(event.id), anyList()))
+                .thenReturn(Collections.emptyList());
+        when(seatCartService.isHeldByAnotherUser(event.id, seat1.id, currentUser.id))
+                .thenReturn(true);
+
+        assertThrows(
+                SeatPendingException.class,
+                () -> reservationService.createReservationForUser(dto, currentUser));
+        verify(seatCartService, never()).releaseSeats(any(), any());
     }
 
     @Test
@@ -289,8 +318,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser))
-                .thenReturn(Collections.emptyList());
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.empty());
 
         assertThrows(
                 EventNotFoundException.class,
@@ -310,7 +339,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1, seat2, seat3));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
 
         assertThrows(
                 NoSeatsAvailableException.class,
@@ -326,7 +356,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
 
         assertThrows(
                 EventBookingClosedException.class,
@@ -346,7 +377,8 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
 
         assertThrows(
                 EventBookingClosedException.class,
@@ -369,8 +401,9 @@ class ReservationServiceTest {
                         CodeGenerator.generateRandomCode());
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
-        when(reservationRepository.findByEventId(event.id))
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
+        when(reservationRepository.findByEventIdAndSeatIds(eq(event.id), anyList()))
                 .thenReturn(List.of(existingReservation));
 
         SeatAlreadyReservedException exception =
@@ -394,8 +427,9 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
-        when(reservationRepository.findByEventId(event.id))
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
+        when(reservationRepository.findByEventIdAndSeatIds(eq(event.id), anyList()))
                 .thenReturn(List.of(existingReservation));
 
         SeatBlockedException exception =
@@ -412,7 +446,8 @@ class ReservationServiceTest {
         when(reservationRepository.find("id in ?1", List.of(id(1)))).thenReturn(queryMock);
         when(queryMock.list()).thenReturn(List.of(reservation));
 
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
         when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
                 .thenReturn(Optional.of(allowance));
 
@@ -428,7 +463,8 @@ class ReservationServiceTest {
         when(reservationRepository.find("id in ?1", List.of(id(1)))).thenReturn(queryMock);
         when(queryMock.list()).thenReturn(List.of(reservation));
 
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
         when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
                 .thenReturn(Optional.of(allowance));
 
@@ -447,8 +483,8 @@ class ReservationServiceTest {
         when(reservationRepository.find("id in ?1", List.of(id(1)))).thenReturn(queryMock);
         when(queryMock.list()).thenReturn(List.of(reservation));
 
-        when(eventUserAllowanceRepository.findByUser(currentUser))
-                .thenReturn(Collections.emptyList());
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.empty());
 
         assertDoesNotThrow(
                 () -> reservationService.deleteReservationForUser(List.of(id(1)), currentUser));
@@ -485,8 +521,10 @@ class ReservationServiceTest {
 
         when(eventRepository.findByIdOptional(event.id)).thenReturn(Optional.of(event));
         mockSeatFind(dto.getSeatIds(), List.of(seat1));
-        when(eventUserAllowanceRepository.findByUser(currentUser)).thenReturn(List.of(allowance));
-        when(reservationRepository.findByEventId(event.id)).thenReturn(Collections.emptyList());
+        when(eventUserAllowanceRepository.findByUserAndEventId(currentUser, event.id))
+                .thenReturn(Optional.of(allowance));
+        when(reservationRepository.findByEventIdAndSeatIds(eq(event.id), anyList()))
+                .thenReturn(Collections.emptyList());
         doNothing().when(eventUserAllowanceRepository).persist(any(EventUserAllowance.class));
 
         reservationService.createReservationForUser(dto, currentUser);
